tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/fault_abort/a/to_b/_test_context/VirtualService.2551668214.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - b
  http:
  - fault:
      abort:
        httpStatus: 418
        percentage:
          value: 100
    route:
    - destination:
        host: b
